fixed links in resume section

--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -30,7 +30,7 @@ const imageRounded = rounded ? "rounded-full" : "rounded-xl";
       > -->
     <div class="card px-6 pt-6 pb-10 flex flex-col items-center bg-black">
       <div class=`max-w-36 flex mb-4 ${imageRounded} overflow-hidden `>
-        <a href={link}>
+        <a href={link} target="_blank">
           <Image src={icon} alt="icon" width="300" height="250" /></a
         >
       </div>
