--- a/src/components/Portfolio.astro
+++ b/src/components/Portfolio.astro
@@ -70,7 +70,7 @@ const optimizedBackground = await getImage({
             ]}
             header="My Portfolio (This Site)"
             text="For this portfolio, I decided to use the static site generator Astro  due to its lightning fast loading times. I used typescirpt for type-saftey and an improved DX, and for CSS I utilized Tailwind for rapid component styling. Even though Astro is designed to ship without JavaScript by default, I found it straightforward to integrate React for those components where interactivity or dynamic data was necessary."
-            link="https://shattereddisk.github.io/rickroll/rickroll.mp4"
+            link="https://thomasfaddegon.dev/"
             links={{
               "View Code": "https://github.com/thomasfaddegon/my-portfolio",
             }}
