--- a/src/components/Position.astro
+++ b/src/components/Position.astro
@@ -23,7 +23,7 @@ const { title, location, years, description, link } = Astro.props as Props;
       <h3 class="text-lightBlue">{title}</h3>
     </div>
     <div class="mb-[1px]">
-      <a href={link}>
+      <a href={link} target="_blank">
         <span class="underline hover:text-lavendar">{location}</span></a
       >
     </div>
