--- a/src/pages/resume.astro
+++ b/src/pages/resume.astro
@@ -53,7 +53,7 @@ import Button from "../components/Button.astro";
 
                   <div class="flex flex-col gap-[4px]">
                     <span>
-                      <strong>Front-End Development:</strong> Javascript, Typescript,
+                      <strong>Front-End Development:</strong> Javascript, typescript,
                       React, NextJS, Node, REST, Astro, CSS, Sass, SQL, NoSQL.
                     </span>
                     <span>
@@ -74,7 +74,7 @@ import Button from "../components/Button.astro";
                 <div>
                   <h2 class="mb-4 mt-6">Professional Experience</h2>
                   <ResumePosition
-                    position="UX Engineer"
+                    position="Product Engineer"
                     company="The Luminary Agency"
                     date="2021 - Present"
                     link="https://www.theluminaryagency.com/"
@@ -94,7 +94,7 @@ import Button from "../components/Button.astro";
                     </li>
                   </ResumePosition>
                   <ResumePosition
-                    position="Front-End Developer & Product Strategist"
+                    position="Product Engineer"
                     company="Higher Self Yoga"
                     date="2020 - Present"
                     link="https://higherselfyoga.org/"
@@ -174,7 +174,7 @@ import Button from "../components/Button.astro";
                   <Button
                     text="Download"
                     type="tertiary"
-                    link="/Thomas Faddegon - Resume 2024.pdf"
+                    link="/Thomas Faddegon - Product Engineer Resume 2024.pdf"
                     target="_blank"
                   />
                   <Button
