--- a/src/components/Philosophy.astro
+++ b/src/components/Philosophy.astro
@@ -57,8 +57,8 @@ import graphic from "../images/graphics/graphic-1.webp";
                   </p>
                   <p>
                     <span class="font-bold">5. Tech Translator:</span>
-                    Our holistic understanding of design, engineering, and product
-                    strategy enables us to break down technical concepts for non-technical
+                    We speak the languages of design, engineering, and business,
+                    enabling us to break down technical concepts for non-technical
                     stakeholders.
                   </p>
 
