changed border in experience section

--- a/src/components/Experience.astro
+++ b/src/components/Experience.astro
@@ -16,7 +16,7 @@ import newPaltzIcon from "../images/icons/new-paltz-icon.png";
       <div>
         <h2 class="mb-12 padding-extra">Work Experience</h2>
         <div
-          class="flex flex-col lg:flex-row gap-10 md:gap-24 mb-16 padding-extra"
+          class="grid grid-cols-1 lg:grid-cols-2 gap-6 lg:gap-x-20 lg:gap-y-8 padding-extra"
         >
           <Position
             title="Product Engineer"
@@ -32,28 +32,27 @@ import newPaltzIcon from "../images/icons/new-paltz-icon.png";
             years="2020 - Present (Part Time)"
             description="Designed and implemented a product and marketing strategy that grew user traffic from 1,000 to 25,000 monthly and grew email subscriber list from 2,000 to 18,000. Led a team in migrating from WordPress to Webflow to enhance design and functionality, which increased site speed by 50%, reduced bounce rates by 5%, and increased conversions by 25%. Developed a new community platform with optimized user flow and onboarding, integrating features like personalized dashboards, a tagged forum, and real-time messaging."
           />
-        </div>
-        <div class="track sm:py-16">
-          <div class="flex flex-col lg:flex-row gap-10 md:gap-24 padding-extra">
-            <Position
-              title="Director of Digital Marketing"
-              link="https://www.cruiseline.com/"
-              location="Cruiseline.com"
-              years="2018 - 2020"
-              description="Led a team executing a comprehensive marketing and sales strategy that leveraged display, PPC, email, and SEO, increasing conversions by 30%. Proposed and implemented UX/UI enhancements using A/B testing, user recordings, and heatmaps to boost conversions. Guided engineering in aligning product prototypes with optimal UX design principles and business objectives. Conducted in-depth market and sales trend analysis over six years, positioning the company as an industry leader."
-            />
-            <Position
-              title="Inbound Marketing & Content Strategy"
-              location="Cruiseline.com"
-              link="https://www.cruiseline.com/"
-              years="2015 - 2018"
-              description="Crafted a robust content and email strategy, enhancing site and email presence through rebranding, SEO, and compelling editorial pieces which led to a 900% increase in site traffic. Managed weekly analytics, leveraging insights to optimize content and marketing strategies. Collaborated with engineers to create a display ad network, generating upwards of $200k annually. Performed usability testing on new products, writing detailed feedback and bug reports for the dev team to optimize new features before launch."
-            />
-          </div>
+
+          <Position
+            title="Director of Digital Marketing"
+            link="https://www.cruiseline.com/"
+            location="Cruiseline.com"
+            years="2018 - 2020"
+            description="Led a team executing a comprehensive marketing and sales strategy that leveraged display, PPC, email, and SEO, increasing conversions by 30%. Proposed and implemented UX/UI enhancements using A/B testing, user recordings, and heatmaps to boost conversions. Guided engineering in aligning product prototypes with optimal UX design principles and business objectives. Conducted in-depth market and sales trend analysis over six years, positioning the company as an industry leader."
+          />
+          <Position
+            title="Inbound Marketing & Content Strategy"
+            location="Cruiseline.com"
+            link="https://www.cruiseline.com/"
+            years="2015 - 2018"
+            description="Crafted a robust content and email strategy, enhancing site and email presence through rebranding, SEO, and compelling editorial pieces which led to a 900% increase in site traffic. Managed weekly analytics, leveraging insights to optimize content and marketing strategies. Collaborated with engineers to create a display ad network, generating upwards of $200k annually. Performed usability testing on new products, writing detailed feedback and bug reports for the dev team to optimize new features before launch."
+          />
         </div>
       </div>
       <!-- Education & Certifications -->
+
       <div class="padding-extra">
+        <div class="mt-24 border-2 border-gray-600"></div>
         <h2 class="mt-24 mb-16">Certifications & Education</h2>
         <div>
           <div
@@ -103,7 +102,7 @@ import newPaltzIcon from "../images/icons/new-paltz-icon.png";
 </section>
 
 <style>
-  .track {
+  /* .track {
     border: 2px solid rgb(150, 134, 134);
     border-left: none;
 
@@ -111,7 +110,7 @@ import newPaltzIcon from "../images/icons/new-paltz-icon.png";
     border-bottom-left-radius: 0;
     border-top-right-radius: 10px;
     border-bottom-right-radius: 10px;
-  }
+  } */
 
   @media (max-width: 640px) {
     .track {
