--- a/src/components/Philosophy.astro
+++ b/src/components/Philosophy.astro
@@ -34,8 +34,9 @@ import graphic from "../images/graphics/graphic-1.webp";
                     <span class="font-bold"
                       >1. Improved Cross-Team Collaboration:
                     </span>
-                    We serve as the critical link between design, dev, and product
-                    teams, harmonizing product vision and technical execution.
+                    Product engineers serve as the critical link between design,
+                    dev, and product teams, harmonizing product vision and technical
+                    execution.
                   </p>
                   <p>
                     <span class="font-bold">2. Rapid Prototyping:</span>
@@ -58,7 +59,7 @@ import graphic from "../images/graphics/graphic-1.webp";
                   <p>
                     <span class="font-bold">5. Tech Translator:</span>
                     We speak the languages of design, engineering, and business,
-                    enabling us to break down technical concepts for non-technical
+                    a huge asset when breaking down technical concepts for non-technical
                     stakeholders.
                   </p>
 
