--- a/src/components/Position.astro
+++ b/src/components/Position.astro
@@ -12,7 +12,7 @@ export interface Props {
 const { title, location, years, description, link } = Astro.props as Props;
 ---
 
-<div class="w-full lg:w-1/2">
+<div class="w-full">
   <div class="flex flex-col">
     <div class="flex flex-start mb-[-2px]">
       <!-- <H3
