--- a/src/components/Philosophy.astro
+++ b/src/components/Philosophy.astro
@@ -58,9 +58,8 @@ import graphic from "../images/graphics/graphic-1.webp";
                   </p>
                   <p>
                     <span class="font-bold">5. Tech Translator:</span>
-                    We speak the languages of design, engineering, and business,
-                    a huge asset when breaking down technical concepts for non-technical
-                    stakeholders.
+                    Our fluency in the languages of design, engineering, and business
+                    enables us to simplify technical concepts for non-technical stakeholders.
                   </p>
 
                   <!-- <h5>What I Provide</h5>
