adjusted responsive behavior in skills section

--- a/src/components/Skills.astro
+++ b/src/components/Skills.astro
@@ -27,19 +27,19 @@ import designIcon from "../images/icons/design-icon.png";
                 header="Front-End Development"
                 text="I build responsive, high-performing digital experiences using cutting-edge web technologies including Javascript, Typescript, React, Next, and Supabase."
                 icon={codeIcon}
-                classes="w-full md:w-2/3 xl:w-1/3"
+                classes="w-full max-w-xl xl:w-1/3"
               />
               <Card
                 header="Product/UX Design"
                 text="I use thoughtful product design and UX best-practices to create frictionless user journeys, driving engagement and accomplishing business objectives."
                 icon={designIcon}
-                classes="w-full md:w-2/3 xl:w-1/3"
+                classes="w-full max-w-xl xl:w-1/3"
               />
               <Card
                 header="Data-Driven Optimization"
                 text="I make analytics-based improvements that boost KPIs by effectively utilizing Google Analytics, Optimizely, and Python libraries like pandas and matplotlib."
                 icon={dataIcon}
-                classes="w-full md:w-2/3 xl:w-1/3"
+                classes="w-full max-w-xl xl:w-1/3"
               />
             </div>
           </div>
