resume copy tweaks

--- a/src/components/Experience.astro
+++ b/src/components/Experience.astro
@@ -19,14 +19,14 @@ import newPaltzIcon from "../images/icons/new-paltz-icon.png";
           class="grid grid-cols-1 lg:grid-cols-2 gap-6 lg:gap-x-20 lg:gap-y-8 padding-extra"
         >
           <Position
-            title="Product Engineer"
+            title="Product/UX Engineer"
             location="The Luminary Agency"
             link="https://theluminaryagency.com/"
             years="2021 - Present (Part Time)"
             description="Developed responsive web interfaces using WordPress, Webflow, Squarespace, and HTML/CSS/JavaScript. Created UI wireframe designs with Figma, Relume, and Balsamiq, improving user experience and navigability. Collaborated on brand aesthetics with the design team, ensuring cohesive visual strategies across platforms. Achievements include 1,000% traffic increase, 150% higher conversion rates, and 15% lower bounce rates."
           />
           <Position
-            title="Product Engineer"
+            title="Product/UX Engineer"
             location="Higher Self Yoga"
             link="https://higherselfyoga.org"
             years="2020 - Present (Part Time)"
