--- a/src/components/Skills.astro
+++ b/src/components/Skills.astro
@@ -31,7 +31,7 @@ import designIcon from "../images/icons/design-icon.png";
               />
               <Card
                 header="Product/UX Design"
-                text="I use thoughtful product design and UX best-practices to create frictionless user journeys, driving engagement and accomplishing business objectives."
+                text="I merge thoughtful product design and UX best-practices to create frictionless user journeys, driving engagement and accomplishing business objectives."
                 icon={designIcon}
                 classes="w-full max-w-xl xl:w-1/3"
               />
