--- a/src/pages/resume.astro
+++ b/src/pages/resume.astro
@@ -74,7 +74,7 @@ import Button from "../components/Button.astro";
                 <div>
                   <h2 class="mb-4 mt-6">Professional Experience</h2>
                   <ResumePosition
-                    position="Product Engineer"
+                    position="Product/UX Engineer"
                     company="The Luminary Agency"
                     date="2021 - Present"
                     link="https://www.theluminaryagency.com/"
@@ -94,7 +94,7 @@ import Button from "../components/Button.astro";
                     </li>
                   </ResumePosition>
                   <ResumePosition
-                    position="Product Engineer"
+                    position="Product/UX Engineer"
                     company="Higher Self Yoga"
                     date="2020 - Present"
                     link="https://higherselfyoga.org/"
