added new projects, switched copy to UX engineer

--- a/src/components/DownloadIcon.astro
+++ b/src/components/DownloadIcon.astro
@@ -1,6 +1,6 @@
 <!doctype html>
 <div class="flex flex-row w-full justify-center mb-4">
-  <a href="/Thomas Faddegon - Product Engineer Resume 2024.pdf" target="_blank">
+  <a href="/Thomas Faddegon - UX Engineer Resume 2024.pdf" target="_blank">
     <div
       class="flex flex-row items-center download cursor-pointer text-xl text-purple hover:text-lavendar font-bold"
     >
