--- a/src/components/Experience.astro
+++ b/src/components/Experience.astro
@@ -19,7 +19,7 @@ import newPaltzIcon from "../images/icons/new-paltz-icon.png";
           class="grid grid-cols-1 lg:grid-cols-2 gap-6 lg:gap-x-20 lg:gap-y-8 padding-extra"
         >
           <Position
-            title="Product/UX Engineer"
+            title="UX Engineer"
             location="The Luminary Agency"
             link="https://theluminaryagency.com/"
             years="2021 - Present (Part Time)"
