--- a/src/pages/resume.astro
+++ b/src/pages/resume.astro
@@ -31,20 +31,20 @@ import Button from "../components/Button.astro";
                   </div>
                 </div>
                 <h3 class="text-center text-xl mb-10">
-                  Product Engineer | Brooklyn, NY
+                  UX Engineer | Brooklyn, NY
                 </h3>
                 <p class="mb-8">
-                  Hello! I am a dedicated product engineer with a proven track
-                  record of leveraging front-end technologies, product strategy,
-                  user-centric design, and data analysis to enhance digital
-                  platforms and achieve business goals. With over 10 years of
-                  web experience building and optimizing web products, my work
-                  has led to significant improvements in traffic, user
-                  engagement, conversion rates, and overall business growth. My
-                  holistic approach blends an empathetic and intuitive
-                  understanding of user behavior with robust analytical
-                  insights, and I am eager to help your team craft solutions
-                  grounded in user needs and refined with data-driven
+                  Hello! I am a dedicated UX (user-experience) engineer with a
+                  proven track record of leveraging front-end technologies,
+                  product strategy, user-centric design, and data analysis to
+                  enhance digital platforms and achieve business goals. With
+                  over 10 years of web experience building and optimizing web
+                  products, my work has led to significant improvements in
+                  traffic, user engagement, conversion rates, and overall
+                  business growth. My holistic approach blends an empathetic and
+                  intuitive understanding of user behavior with robust
+                  analytical insights, and I am eager to help your team craft
+                  solutions grounded in user needs and refined with data-driven
                   strategies.
                 </p>
                 <!-- Technical Profiencies -->
@@ -57,10 +57,6 @@ import Button from "../components/Button.astro";
                       React, NextJS, Node, REST, Astro, CSS, Sass, SQL, NoSQL.
                     </span>
                     <span>
-                      <strong>Product & Marketing:</strong> Competitor/market analysis,
-                      content strategy, KPI analysis, SEO & SEM, A/B testing.
-                    </span>
-                    <span>
                       <strong>UX/UI Design:</strong> User research, page design and
                       optimization, user testing, Figma, wireframing.
                     </span>
@@ -68,13 +64,17 @@ import Button from "../components/Button.astro";
                       <strong>Data & Analytics:</strong> GA, funnel/conversion optimization,
                       data analysis and visualization, Python, NumPy, Pandas.
                     </span>
+                    <!-- <span>
+                      <strong>Product & Marketing:</strong> Competitor/market analysis,
+                      content strategy, KPI analysis, SEO & SEM, A/B testing.
+                    </span> -->
                   </div>
                 </div>
                 <!-- Professional Experience -->
                 <div>
                   <h2 class="mb-4 mt-6">Professional Experience</h2>
                   <ResumePosition
-                    position="Product/UX Engineer"
+                    position="UX Engineer"
                     company="The Luminary Agency"
                     date="2021 - Present"
                     link="https://www.theluminaryagency.com/"
@@ -174,7 +174,7 @@ import Button from "../components/Button.astro";
                   <Button
                     text="Download"
                     type="tertiary"
-                    link="/Thomas Faddegon - Product Engineer Resume 2024.pdf"
+                    link="/Thomas Faddegon - UX Engineer Resume 2024.pdf"
                     target="_blank"
                   />
                   <Button
