--- a/src/components/Philosophy.astro
+++ b/src/components/Philosophy.astro
@@ -22,7 +22,7 @@ import graphic from "../images/graphics/graphic-1.webp";
             <div class="col-span-1 bg-purple py-6">
               <!-- content -->
               <div class="flex flex-col gap-4">
-                <h5>What I Provide</h5>
+                <!-- <h5>What I Provide</h5>
                 <h2 class="">5 Ways a Product Engineer Can Help Your Team</h2>
                 <div>
                   <p>
@@ -60,9 +60,9 @@ import graphic from "../images/graphics/graphic-1.webp";
                     <span class="font-bold">5. Tech Translator:</span>
                     Our fluency in the languages of design, engineering, and business
                     enables us to simplify technical concepts for non-technical stakeholders.
-                  </p>
+                  </p> -->
 
-                  <!-- <h5>What I Provide</h5>
+                <h5>What I Provide</h5>
                 <h2 class="">5 Ways a UX Engineer Can Help Your Team</h2>
                 <div>
                   <p>
@@ -80,8 +80,8 @@ import graphic from "../images/graphics/graphic-1.webp";
                   </p>
                   <p>
                     <span class="font-bold">2. Rapid Prototyping:</span>
-                    A UX engineer on the design team can speed up testing and iteration
-                    by quickly developing proof-of-concept prototypes.
+                    A UX engineer on the design team speeds up testing and iteration
+                    by quickly creating proof-of-concept prototypes.
                   </p>
                   <p>
                     <span class="font-bold"
@@ -101,7 +101,7 @@ import graphic from "../images/graphics/graphic-1.webp";
                     We blend our engineering expertise with our UX skills in empathy
                     and communication to break down technical concepts for non-technical
                     stakeholders.
-                  </p> -->
+                  </p>
 
                   <!--
               <div class="flex flex-col gap-4">
