--- a/src/components/Project.astro
+++ b/src/components/Project.astro
@@ -19,7 +19,7 @@ const { header, image, tags, text, link, links } = Astro.props as Props;
   <div class="grid grid-cols-1 lg:grid-cols-12 gap-12">
     <div class="lg:col-span-5">
       <div class="image-container">
-        <a href={link}>
+        <a href={link} target="_blank">
           <Image
             src={image}
             alt=""
