--- a/src/components/Skills.astro
+++ b/src/components/Skills.astro
@@ -12,7 +12,7 @@ import designIcon from "../images/icons/design-icon.png";
         <div>
           <div class="flex justify-center">
             <h2 class="text-center mb-8 max-w-2xl lg:max-w-6xl">
-              I use a holistic skillset of engineering, product strategy, and
+              I use my holistic knowledge of engineering, user behavior, and
               data analysis to polish ideas to perfection.
             </h2>
           </div>
@@ -30,8 +30,8 @@ import designIcon from "../images/icons/design-icon.png";
                 classes="w-full max-w-xl xl:w-1/3"
               />
               <Card
-                header="Product/UX Design"
-                text="I merge thoughtful product design and UX best-practices to create frictionless user journeys, driving engagement and accomplishing business objectives."
+                header="UX/UI Design"
+                text="I utilize my background in UX copywriting and UI design to create frictionless user journeys, boosting engagement and accomplishing business objectives."
                 icon={designIcon}
                 classes="w-full max-w-xl xl:w-1/3"
               />
