--- a/src/components/Portfolio.astro
+++ b/src/components/Portfolio.astro
@@ -24,7 +24,7 @@ const optimizedBackground = await getImage({
   <div class="container container-large">
     <div class="padding-global py-32">
       <div class="padding-extra">
-        <h2 class="mb-20 text-center text-5xl">Recent Projects</h2>
+        <h2 class="mb-20 lg:text-center text-5xl">Recent Projects</h2>
         <div class="flex flex-col gap-12">
           <Project
             image={beatTrends}
@@ -72,7 +72,7 @@ const optimizedBackground = await getImage({
               "UX Optimization",
             ]}
             header="Girl Camper UX & Analytics Audit"
-            text="I was hired by Girl Camper, a popular camping and RVing site for women with over a million followers, to conduct a UX and analytics audit of their website. I utilized Google Analytics and Crazy Egg to track user behavior and analyze the data, identifying areas for improvement and optimization. After compiling my findings, I made several recommendations including an overhaul of the hero section based on UX best practices, a reordering of the homepage sections according to user behavior analytics, and revisions to the user onboarding flow designed to reduce friction and increase sign-ups. My insights are currently being used to guide an overhaul of the site. New metrics will be available soon!"
+            text="I was hired to conduct a UX and analytics audit for Girl Camper, a popular camping and RVing site for women with over a million followers. I utilized Google Analytics and Crazy Egg to track user behavior and analyze the data, identifying areas for improvement and optimization. After compiling my findings, I made several recommendations including an overhaul of the hero section based on UX best practices, a reordering of the homepage sections according to user behavior analytics, and revisions to the user onboarding flow designed to reduce friction and increase sign-ups. My insights are currently being used to guide an overhaul of the site. New metrics will be available soon!"
             link="https://docs.google.com/presentation/d/1IMINEAH_ypOf5mbiwSHVLK8URMz2iOPMjdIQyKBcBQ0/edit?usp=sharing"
           />
           <Project
