--- a/src/components/Project.astro
+++ b/src/components/Project.astro
@@ -15,7 +15,7 @@ const { header, image, tags, text, link, links } = Astro.props as Props;
 ---
 
 <!-- drop-shadow-[0px_0px_5px_rgba(255,255,255,0.75)] -->
-<div class="bg-black rounded-xl p-10">
+<div class="bg-black rounded-xl p-8 md:p-10">
   <div class="grid grid-cols-1 lg:grid-cols-12 gap-12">
     <div class="lg:col-span-5">
       <div class="image-container">
