--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -8,7 +8,7 @@ import FormattedDate from "../../components/FormattedDate.astro";
 import type { BlogProps, PostProps } from "../../../types";
 
 const posts = (await getCollection("blog")).sort(
-  (a: any, b: any) => a.data.pubDate.valueOf() - b.data.pubDate.valueOf(),
+  (a: any, b: any) => b.data.pubDate.valueOf() - a.data.pubDate.valueOf()
 );
 ---
 
@@ -52,7 +52,7 @@ const posts = (await getCollection("blog")).sort(
       }
       .title {
         color: rgb(var(--black));
-        line-height: 1;
+        line-height: 1.25;
       }
       .date {
         margin: 0;
