--- a/src/pages/resume.astro
+++ b/src/pages/resume.astro
@@ -53,7 +53,7 @@ import Button from "../components/Button.astro";
 
                   <div class="flex flex-col gap-[4px]">
                     <span>
-                      <strong>Front-End Development:</strong> Javascript, typescript,
+                      <strong>Front-End Development:</strong> Javascript, Typescript,
                       React, NextJS, Node, REST, Astro, CSS, Sass, SQL, NoSQL.
                     </span>
                     <span>
