--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -4,15 +4,17 @@ import { Image } from "astro:assets";
 import gradientBackground from "../images/backgrounds/gradient-2000.png";
 import { getImage } from "astro:assets";
 
-const { header, title, text, icon, link, classes, rounded } = Astro.props as {
-  header: string;
-  title: string;
-  text: string;
-  icon: any;
-  link?: string;
-  classes?: string;
-  rounded?: boolean;
-};
+const { header, title, text, icon, link, classes, rounded, nudge } =
+  Astro.props as {
+    header: string;
+    title: string;
+    text: string;
+    icon: any;
+    link?: string;
+    classes?: string;
+    rounded?: boolean;
+    nudge?: string;
+  };
 
 const optimizedBackground = await getImage({
   src: gradientBackground,
@@ -28,8 +30,10 @@ const imageRounded = rounded ? "rounded-full" : "rounded-xl";
     <!-- <div
         class="card px-6 pt-6 pb-10 flex flex-col items-center border-2 bg-slate-900 drop-shadow-[0px_0px_3px_rgba(255,255,255,0.75)] h-full"
       > -->
-    <div class="card px-6 pt-6 pb-10 flex flex-col items-center bg-black">
-      <div class=`max-w-36 flex mb-4 ${imageRounded} overflow-hidden `>
+    <div class="card pt-6 pb-10 flex flex-col bg-black">
+      <div
+        class=`max-w-36 flex mb-4 ${imageRounded} overflow-hidden relative ${nudge}`
+      >
         <a href={link} target="_blank">
           <Image src={icon} alt="icon" width="300" height="250" /></a
         >
@@ -41,7 +45,7 @@ const imageRounded = rounded ? "rounded-full" : "rounded-xl";
       <div class="mb-1">
         <span class="text-base">{title}</span>
       </div>
-      <span class="text-center"><p class="mb-[-4px]">{text}</p></span>
+      <span class=""><p class="mb-[-4px]">{text}</p></span>
     </div>
   </div>
 </div>
