--- a/src/components/H3.astro
+++ b/src/components/H3.astro
@@ -25,9 +25,7 @@ const hideBracket = hideBracketOnMobile ? "hidden xl:flex" : "";
 </div> -->
 <div class="flex gap-2">
   <!-- <span class={`text-purple text-2xl mb-[2px] ${hideBracket}`}>&lt;</span> -->
-  <h3
-    class={`text-xl xl:whitespace-nowrap text-center overflow-hidden text-lightBlue ${center}`}
-  >
+  <h3 class={`text-xl overflow-hidden text-lightBlue`}>
     {header}
   </h3>
   <!-- <span class={`text-purple text-2xl mb-[2px] ${hideBracket}`}>&gt;</span> -->
