--- a/src/components/Philosophy.astro
+++ b/src/components/Philosophy.astro
@@ -96,12 +96,37 @@ import graphic from "../images/graphics/graphic-1.webp";
                     For crucial sprints, UX engineers can shift into full-time dev
                     mode and provide a much-needed extra set of hands.
                   </p>
+
                   <p>
                     <span class="font-bold">5. Tech Translator:</span>
                     We blend our engineering expertise with our UX skills in empathy
                     and communication to break down technical concepts for non-technical
                     stakeholders.
                   </p>
+
+                  <div class="flex flex-col">
+                    <span class="font-bold">Learn More:</span>
+                    <span class="">
+                      -
+                      <a
+                        class="underline"
+                        href="/blog/6-things-ux-engineers-can-do-that-engineers-cant/"
+                      >
+                        6 Things UX Engineers Can Do that (Most) Engineers Can't</a
+                      >
+                    </span>
+
+                    <span>
+                      -
+                      <a
+                        class="underline"
+                        href="/blog/5-things-ux-engineers-can-do-that-designers-cant/"
+                      >
+                        5 Things UX Engineers Can Do that (Most) UX Designers
+                        Can't</a
+                      >
+                    </span>
+                  </div>
 
                   <!--
               <div class="flex flex-col gap-4">
