--- a/src/components/Skills.astro
+++ b/src/components/Skills.astro
@@ -1,25 +1,55 @@
 ---
 import Card from "../components/Card.astro";
-import codeIcon from "../images/icons/code-icon.png";
-import dataIcon from "../images/icons/data-icon.png";
-import designIcon from "../images/icons/design-icon.png";
+import codeIcon from "../images/icons/code-icon-1.png";
+import dataIcon from "../images/icons/data-icon-1.png";
+import designIcon from "../images/icons/design-icon-1.png";
 ---
 
 <section>
   <div class="container container-large">
     <div class="padding-global py-20 lg:py-32">
       <div class="padding-extra">
-        <div>
-          <div class="flex justify-center">
+        <div class="flex w-full flex-col">
+          <h2 class="mb-8 text-left w-full">My Skills</h2>
+
+          <!-- 3 Boxes -->
+          <div class="flex items-stretch">
+            <div class="flex flex-col lg:flex-row lg:gap-16">
+              <Card
+                header="Front-End Development"
+                text="I build responsive, high-performing digital experiences using cutting-edge web technologies including Javascript, Typescript, React, Next, and Supabase."
+                icon={codeIcon}
+                classes="w-full max-w-md xl:w-1/3"
+                nudge="-left-1"
+              />
+              <Card
+                header="UX/UI Design"
+                text="I create frictionless user journeys and easy-to-navigate interfaces, boost engagement and accomplishing business objectives."
+                icon={designIcon}
+                classes="w-full max-w-md xl:w-1/3"
+                nudge="-left-1"
+              />
+              <Card
+                header="Data-Driven Optimization"
+                text="I optimize for conversions and sales with analytics-driven insights from Google Analytics, Optimizely, and Python libraries like pandas and matplotlib."
+                icon={dataIcon}
+                classes="w-full max-w-md xl:w-1/3"
+                nudge="-left-1"
+              />
+            </div>
+          </div>
+
+          <!-- Center Aligned -->
+          <!-- <div class="flex justify-center">
             <h2 class="text-center mb-8 max-w-2xl lg:max-w-6xl">
               I use my holistic knowledge of engineering, user behavior, and
               data analysis to polish ideas to perfection.
             </h2>
           </div>
           <div class="mt-4"></div>
-          <!-- 3 Boxes -->
+
           <div class="flex justify-center items-stretch">
-            <!-- <div class="grid grid-cols-1 lg:grid-cols-3"> -->
+            <div class="grid grid-cols-1 lg:grid-cols-3">
             <div
               class="flex flex-col justify-center lg:flex-row items-center gap-2"
             >
@@ -42,7 +72,7 @@ import designIcon from "../images/icons/design-icon.png";
                 classes="w-full max-w-xl xl:w-1/3"
               />
             </div>
-          </div>
+          </div> -->
 
           <!-- classes="lg:pl-6 lg:w-1/2 xl:w-1/3 h-full" -->
           <!--
