--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -32,8 +32,6 @@ body {
   text-align: left;
   background: linear-gradient(var(--gray-gradient)) no-repeat;
   background-size: 100% 600px;
-  word-wrap: break-word;
-  overflow-wrap: break-word;
   color: white;
 }
 
@@ -75,8 +73,8 @@ h1 {
 
 @media (max-width: 1024px) {
   h1 {
-    font-size: 2rem;
-    line-height: 2.5rem;
+    font-size: 2.25rem;
+    line-height: 2.75rem;
   }
 }
 
@@ -88,7 +86,7 @@ h2 {
 
 @media (max-width: 1024px) {
   h2 {
-    font-size: 1.75rem;
+    font-size: 2rem;
     line-height: 2.25rem;
   }
 }
@@ -104,7 +102,7 @@ h3 {
 
 h4 {
   font-size: 1.8rem;
-  line-height: 1.5rem;
+  line-height: 1.75rem;
   @apply text-purple;
 }
 
@@ -140,6 +138,11 @@ span {
   font-size: 1rem;
 }
 
+a {
+  letter-spacing: 0.5px;
+  font-weight: 300;
+}
+
 /* Carousel */
 
 .swiper-button-prev,
@@ -155,7 +158,7 @@ span {
   position: absolute !important;
   height: 1px;
   width: 1px;
-  overflow: hidden;
+  /* overflow: hidden; */
   /* IE6, IE7 - a 0 height clip, off to the bottom right of the visible 1px box */
   clip: rect(1px 1px 1px 1px);
   /* maybe deprecated but we need to support legacy browsers */
@@ -198,8 +201,35 @@ span {
 
 /* BLOG STYLES */
 
-.blog-post h1 {
-  font-weight: 800; /* Make it bold */
+article h1 {
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+
+  font-size: 2.5rem;
+  line-height: 3rem;
+  font-weight: 500;
+}
+
+article a {
+  text-decoration: underline;
+  @apply text-white;
+  @apply hover:text-lightBlue;
+}
+
+article button {
+  @apply text-white;
+}
+
+.blog-post h2 {
+  font-size: 2rem;
+  color: rgb(137, 170, 255);
+  line-height: 2.5rem;
+  margin-top: 3rem;
+  margin-bottom: 0.75rem;
+}
+
+.blog-post h2:first-of-type {
+  margin-top: 1rem;
 }
 
 .blog-post h2,
@@ -207,7 +237,7 @@ span {
 .blog-post h4,
 .blog-post h5,
 .blog-post h6 {
-  font-weight: 500; /* Less bold than h1 */
+  font-weight: 500;
 }
 
 .blog-post img {
@@ -215,8 +245,8 @@ span {
 }
 
 .caption {
-  font-size: 0.875rem /* 14px */;
-  line-height: 1.25rem /* 20px */;
+  font-size: 0.875rem;
+  line-height: 1.25rem;
   text-align: center;
   width: 100%;
   margin-top: -0.5rem;
@@ -226,13 +256,6 @@ span {
 
 .blog-post p {
   margin-bottom: 1rem;
-}
-
-.blog-post h2 {
-  font-size: 2rem;
-  margin-top: 2rem;
-  margin-bottom: 0.75rem;
-  font-family: "IBM Plex Mono", monospace;
 }
 
 .button {
